# pcfw

./: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile
include/: pcfw.h  pcfw.hpp
include/pc/: framework.hpp  framework_internal.hpp
include/pcfw/: pcfw.hpp  pcfw_internal.hpp
source/pc/: framework.cpp  framework_linux.cpp  framework_windows.cpp
src/: pcfw.c  pcfw_linux.c  pcfw_linux.cpp  pcfw_windows.cpp  window.cpp
src/idgui/: idfw.c  idfw.h  idgui.c  idgui.h
src/tests/: main.c
tests/: blank_window.cpp  window.c  window.cpp
